--- a/23_edit.html
+++ b/23_edit.html
@@ -15,7 +15,7 @@
             <div class="hover">SOOKI’s Portfolio</div>
         </header>
         <ul class="nav">
-            <li class="off"><a href="23_mobile.html">모바일 UXUI</a></li>
+            <li class="off"><a href="index.html">모바일 UXUI</a></li>
             <li class="off"><a href="23_web.html">웹 UXUI</a></li>
             <li class="off"><a href="23_contents.html">콘텐츠</a></li>
             <li class="on"><a href="23_edit.html">편집</a></li>
