--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>23 Sooki Mobile UXUI</title>
-        <link rel="stylesheet" href="23_mobile.css">
+        <link rel="stylesheet" href="index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700;900&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
             <div class="hover">SOOKI’s Portfolio</div>
         </header>
         <ul class="nav">
-            <li class="on"><a href="23_mobile.html">모바일 UXUI</a></li>
+            <li class="on"><a href="index.html">모바일 UXUI</a></li>
             <li class="off"><a href="23_web.html">웹 UXUI</a></li>
             <li class="off"><a href="23_contents.html">콘텐츠</a></li>
             <li class="off"><a href="23_edit.html">편집</a></li>
