--- a/23_contents.html
+++ b/23_contents.html
@@ -19,7 +19,7 @@
             <li class="off"><a href="23_web.html">웹 UXUI</a></li>
             <li class="on"><a href="23_contents.html">콘텐츠</a></li>
             <li class="off"><a href="23_edit.html">편집</a></li>
-            <li class="off"><a href="">FUN</a></li>
+            <li class="off"><a href="23_etc.html">ETC.</a></li>
         </ul>
         <main>
             <div class="col">
