--- a/23_edit.html
+++ b/23_edit.html
@@ -19,7 +19,7 @@
             <li class="off"><a href="23_web.html">웹 UXUI</a></li>
             <li class="off"><a href="23_contents.html">콘텐츠</a></li>
             <li class="on"><a href="23_edit.html">편집</a></li>
-            <li class="off"><a href="">FUN</a></li>
+            <li class="off"><a href="23_etc.html">ETC.</a></li>
         </ul>
         <main>
             <div class="col">
@@ -67,6 +67,27 @@
                         <img src="images/parnas2.png" class="c2_shadow">
                     </div>
                 </div>
+                <hr>
+                <div class="c1_1">
+                    <div class="tag">
+                        <p>이화여자대학교 일반대학원 졸업작품</p>
+                        <p>/</p>
+                        <p>자세교정의자 제품설명서</p>
+                        <p>/</p>
+                        <p>2014</p>
+                    </div>
+                    <h2>C-LINER 제품설명서</h2>
+                    <div class="img_c2">
+                        <img src="images/cliner1.png">
+                        <img src="images/cliner23.png">
+                        <img src="images/cliner4.png" class="c2_big">
+                        <img src="images/cliner5.png" class="c2_big">
+                        <img src="images/cliner6.png" class="c2_big">
+                        <img src="images/cliner7.png" class="c2_big">
+                        <img src="images/cliner8.png" class="c2_big shadow" >
+
+                    </div>
+                </div>
             </div>    
             <div class="col">
                 <div class="c1_2">
@@ -82,6 +103,23 @@
                         <img src="images/ibooja news.png">
                     </div>
                 </div> 
+                <hr>
+                <div class="c1_2">
+                    <div class="tag">
+                        <p>하나은행</p>
+                        <p>/</p>
+                        <p>8p 접이식리플릿</p>
+                        <p>/</p>
+                        <p>2020</p>
+                    </div>
+                    <h2>76콜라보 현장지원센터 가이드북</h2>
+                    <div class="img_c3_c">
+                        <img src="images/collabo1.png">
+                        <img src="images/collabo3.png">
+                        <img src="images/collabo2.png">
+                        <img src="images/collabo4.png">
+                    </div>
+                </div>
                 <hr>
                 <div class="c1_2">
                     <div class="tag">
