--- a/23_web.html
+++ b/23_web.html
@@ -19,7 +19,7 @@
             <li class="on"><a href="23_web.html">웹 UXUI</a></li>
             <li class="off"><a href="23_contents.html">콘텐츠</a></li>
             <li class="off"><a href="23_edit.html">편집</a></li>
-            <li class="off"><a href="">FUN</a></li>
+            <li class="off"><a href="23_etc.html">ETC.</a></li>
         </ul>
         <main>
             <div class="section web">
@@ -33,6 +33,10 @@
                 <h2>씨오톡 홈페이지</h2>
                 <div class="img_mh">
                     <div class="img_w1">
+                        <div class="noti">
+                            <img src="images/icon_scroll.png">
+                            <p>스크롤 해보세요</p>
+                        </div>
                         <div class="cothp1">
                             <img src="images/cot_hp_1.png">
                         </div>
@@ -56,6 +60,10 @@
                         <div class="cothp6"><img src="images/cot_hp_6.png"></div>
                     </div>
                     <div class="img_m1">
+                        <div class="noti_m">
+                            <img src="images/icon_scroll.png">
+                            <p>스크롤 해보세요</p>
+                        </div>
                         <div class="cotm1">
                             <img src="images/cothm1.png">
                         </div>
