--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <li class="off"><a href="23_web.html">웹 UXUI</a></li>
             <li class="off"><a href="23_contents.html">콘텐츠</a></li>
             <li class="off"><a href="23_edit.html">편집</a></li>
-            <li class="off"><a href="">FUN</a></li>
+            <li class="off"><a href="23_etc.html">ETC.</a></li>
         </ul>
         <main>
             <div class="section mobile">
                 <div class="tag">
                     <p>런인베스트</p>
                     <p>/</p>
-                    <p>커뮤니티앱</p>
+                    <p>CEO 커뮤니티앱</p>
                     <p>/</p>
                     <p>2022~</p>
                 </div>
@@ -45,7 +45,7 @@
                 <div class="tag">
                     <p>베이글미트</p>
                     <p>/</p>
-                    <p>길거기 맛집 공유 앱</p>
+                    <p>길거리 맛집 공유 앱</p>
                     <p>/</p>
                     <p>2021~2022</p>
                 </div>
