--- a/23_web.html
+++ b/23_web.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<htm lang="ko">
+<html lang="ko">
     <head>
         <meta charset="utf-8">
         <title>23 Sooki Mobile UXUI</title>
@@ -41,21 +41,42 @@
                             <img src="images/cot_hp_1.png">
                         </div>
                         <div class="cothp2">
-                            <video muted autoplay loop class="cothp2-1"><source src="video/대나무숲.mp4"></video>
-                            <video muted autoplay loop class="cothp2-2"><source src="video/전문가QnA.mp4"></video>                        
+                            <video autoplay loop muted class="cothp2-1">
+                                <source src="video/bamboo.mp4" type="video/mp4">
+                            </video>
+                            <video autoplay loop muted class="cothp2-2">
+                                <source src="video/proqna.mp4" type="video/mp4">
+                            </video>
+                           <!-- <video muted autoplay loop class="cothp2-1"><source src="/video/대나무숲.mp4"></video>
+                            <video muted autoplay loop class="cothp2-2"><source src="/video/전문가QnA.mp4"></video> -->
                             <img src="images/cot_hp_2.png">
                         </div>
                         <div class="cothp3">
-                            <video muted autoplay loop class="cothp3-1"><source src="video/알림봇.mp4"></video>
-                            <video muted autoplay loop class="cothp3-2"><source src="video/커뮤니티.mp4"></video>
+                            <video autoplay loop muted class="cothp3-1">
+                                <source src="video/bot.mp4" type="video/mp4">
+                            </video>
+                            <video autoplay loop muted class="cothp3-2">
+                                <source src="video/community.mp4" type="video/mp4">
+                            </video>
+                            <!-- <video muted autoplay loop class="cothp3-1"><source src="/video/알림봇.mp4"></video>
+                            <video muted autoplay loop class="cothp3-2"><source src="/video/커뮤니티.mp4"></video> -->
                             <img src="images/cot_hp_3.png">
                         </div>
                         <div class="cothp4">
-                            <video muted autoplay loop class="cothp4-1"><source src="video/소개해요.mp4"></video>
-                            <video muted autoplay loop class="cothp4-2"><source src="video/씨오팁.mp4"></video>
+                            <video autoplay loop muted class="cothp4-1">
+                                <source src="video/introduction.mp4" type="video/mp4">
+                            </video>
+                            <video autoplay loop muted class="cothp4-2">
+                                <source src="video/cotip.mp4" type="video/mp4">
+                            </video>
+                            <!-- <video muted autoplay loop class="cothp4-1"><source src="/video/소개해요.mp4"></video>
+                            <video muted autoplay loop class="cothp4-2"><source src="/video/씨오팁.mp4"></video> -->
                             <img src="images/cot_hp_4.png"></div>
                         <div class="cothp5">
-                            <video muted autoplay loop class="cothp5-1"><source src="video/인사이트.mp4"></video>
+                            <video autoplay loop muted class="cothp5-1">
+                                <source src="video/insight.mp4" type="video/mp4">
+                            </video>
+                            <!-- <video muted autoplay loop class="cothp5-1"><source src="/video/인사이트.mp4"></video> -->
                             <img src="images/cot_hp_5.png"></div>
                         <div class="cothp6"><img src="images/cot_hp_6.png"></div>
                     </div>
@@ -69,18 +90,39 @@
                         </div>
                         <div class="cotm2">
                             <img src="images/cothm2.png">
-                            <video muted autoplay loop class="cothm2-1"><source src="video/대나무숲.mp4"></video>
-                            <video muted autoplay loop class="cothm2-2"><source src="video/전문가QnA.mp4"></video>
+                            <video autoplay loop muted class="cothm2-1">
+                                <source src="video/bamboo.mp4" type="video/mp4">
+                            </video>
+                            <video autoplay loop muted class="cothm2-2">
+                                <source src="video/proqna.mp4" type="video/mp4">
+                            </video>
+                            <!-- <video muted autoplay loop class="cothm2-1"><source src="video/대나무숲.mp4"></video>
+                            <video muted autoplay loop class="cothm2-2"><source src="video/전문가QnA.mp4"></video> -->
                         </div>
                         <div class="cotm3">
-                            <video muted autoplay loop class="cothm3-1"><source src="video/알림봇.mp4"></video>
+                            <video autoplay loop muted class="cothm3-1">
+                                <source src="video/bot.mp4" type="video/mp4">
+                            </video>
+                            <video autoplay loop muted class="cothm3-2">
+                                <source src="video/community.mp4" type="video/mp4">
+                            </video>
+                            <video autoplay loop muted class="cothm3-3">
+                                <source src="video/introduction.mp4" type="video/mp4">
+                            </video>
+                            <!-- <video muted autoplay loop class="cothm3-1"><source src="video/알림봇.mp4"></video>
                             <video muted autoplay loop class="cothm3-2"><source src="video/커뮤니티.mp4"></video>
-                            <video muted autoplay loop class="cothm3-3"><source src="video/소개해요.mp4"></video>
+                            <video muted autoplay loop class="cothm3-3"><source src="video/소개해요.mp4"></video> -->
                             <img src="images/cothm3.png">
                         </div>
                         <div class="cotm4">
-                            <video muted autoplay loop class="cothm4-1"><source src="video/씨오팁.mp4"></video>
-                            <video muted autoplay loop class="cothm4-2"><source src="video/인사이트.mp4"></video>
+                            <video autoplay loop muted class="cothm4-1">
+                                <source src="video/cotip.mp4" type="video/mp4">
+                            </video>
+                            <video autoplay loop muted class="cothm4-2">
+                                <source src="video/insight.mp4" type="video/mp4">
+                            </video>
+                            <!-- <video muted autoplay loop class="cothm4-1"><source src="video/씨오팁.mp4"></video>
+                            <video muted autoplay loop class="cothm4-2"><source src="video/인사이트.mp4"></video> -->
                             <img src="images/cothm4.png">
                         </div>
                         <div class="cotm5">
@@ -117,8 +159,8 @@
                 </div>
                 <h2>하나 스마트창구 Plus+</h2>
                 <div class="img_w2">
-                    <video muted autoplay loop class="hn_v"><source src="video/하나스마트창구1.mp4"></video>
-                    <video muted autoplay loop class="hn_v"><source src="video/하나스마트창구2.mp4"></video>
+                    <video muted autoplay loop class="hn_v"><source src="video/hanasmart1.mp4"></video>
+                    <video muted autoplay loop class="hn_v"><source src="video/hanasmart2.mp4"></video>
                 </div>
             </div>
         </main>
