--- a/23_edit.html
+++ b/23_edit.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<htm lang="ko">
+<html lang="ko">
     <head>
         <meta charset="utf-8">
         <title>23 Sooki Mobile UXUI</title>
